@@ -1,3 +1,14 @@
+2024-02-23  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* configure.ac: Support --{enable,disable}-{poked,pokefmt} and
+	print summary at end.
+	* pokefmt/Makefile.am: Build pokefmt only if ENABLE_POKEFMT.
+	* poked/Makefile.am: Build poked only if ENABLE_POKED
+	* man/Makefile.am: Build poked manpages only if ENABLE_POKED.
+	* etc/hacking.org (Disabling building some components): New
+	section.
+	* HACKING: Regenerate.
+
 2024-02-24  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
 
 	* run.in (PATH): Add pokefmt/ and poked/ to PATH env var.
